--- a/happyhouse_front/package.json
+++ b/happyhouse_front/package.json
@@ -17,11 +17,13 @@
     "datamaps": "^0.5.9",
     "date-fns": "^1.30.1",
     "dropzone": "^5.5.1",
+    "el-table-infinite-scroll": "^2.0.0",
     "element-ui": "2.4.11",
     "es6-promise": "^4.1.1",
     "flatpickr": "^4.5.7",
     "fuse.js": "^3.2.0",
     "google-maps": "^3.2.1",
+    "jwt-decode": "^3.1.2",
     "nouislider": "^12.1.0",
     "perfect-scrollbar": "^1.3.0",
     "quill": "^1.3.6",
