--- a/happyhouse_front/package.json
+++ b/happyhouse_front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bootstrap-vue-argon-dashboard",
+  "name": "HappyHouse Seoul 18 11",
   "version": "1.0.0",
   "private": true,
   "scripts": {
