--- a/happyhouse_back/src/main/resources/application.properties
+++ b/happyhouse_back/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.servlet.context-path=/happyhouse
 server.port=9999
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/happyhoseseoul1811?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/happyhouseSEOUL1811?useUniCode=yes&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=ssafy
 spring.datasource.password=ssafy
 
